сделал страничку кейса кроме вендоров и отзывов

--- a/src/scss/blocks/case-card.scss
+++ b/src/scss/blocks/case-card.scss
@@ -70,7 +70,7 @@
   font-weight: 700;
   font-size: 20px;
   line-height: 120%;
-  font-family: "Proxima Nova", "Arial", sans-serif;
+  font-family: "Proxima Nova", Arial, sans-serif;
 
   @media (min-width: $desktop-width) {
     font-weight: 500;
