--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,95 +1,98 @@
-@import "./variables.scss";
-@import "./global.scss";
-@import "./mixin.scss";
-@import "./fonts.scss";
+@import "./variables";
+@import "./global";
+@import "./mixin";
+@import "./fonts";
 
 // @import "./vendor/choices/base.min.scss";
-@import "./vendor/choices/choices.min.scss";
-@import "./vendor/swiper/swiper-bundle.scss";
+@import "./vendor/choices/choices.min";
+@import "./vendor/swiper/swiper-bundle";
+
 //
-@import "./blocks/visually-hidden.scss";
-@import "./blocks/bg.scss";
-@import "./blocks/container.scss";
-@import "./blocks/tabs.scss";
-@import "./blocks/button.scss";
-@import "./blocks/title.scss";
-@import "./blocks/breadcumbs.scss";
-@import "./blocks/daw-list.scss";
-@import "./blocks/form.scss";
-@import "./blocks/section.scss";
-@import "./blocks/nav.scss";
-@import "./blocks/logo.scss";
-@import "./blocks/burger.scss";
-@import "./blocks/menu.scss";
-@import "./blocks/next-link.scss";
-@import "./blocks/blue-link.scss";
-@import "./blocks/show-more.scss";
-@import "./blocks/modal.scss";
-@import "./blocks/modal-image.scss";
-@import "./blocks/swiper.scss";
-@import "./blocks/section-title.scss";
-@import "./blocks/messenger.scss";
-@import "./blocks/side-panel.scss";
+@import "./blocks/visually-hidden";
+@import "./blocks/bg";
+@import "./blocks/container";
+@import "./blocks/tabs";
+@import "./blocks/button";
+@import "./blocks/title";
+@import "./blocks/breadcumbs";
+@import "./blocks/daw-list";
+@import "./blocks/form";
+@import "./blocks/section";
+@import "./blocks/nav";
+@import "./blocks/logo";
+@import "./blocks/burger";
+@import "./blocks/menu";
+@import "./blocks/next-link";
+@import "./blocks/blue-link";
+@import "./blocks/show-more";
+@import "./blocks/modal";
+@import "./blocks/modal-image";
+@import "./blocks/swiper";
+@import "./blocks/section-title";
+@import "./blocks/messenger";
+@import "./blocks/side-panel";
+@import "./blocks/list";
+
 //
-@import "./blocks/page.scss";
-@import "./blocks/page-header.scss";
-@import "./blocks/page-main.scss";
-@import "./blocks/page-footer.scss";
-@import "./blocks/case.scss";
-@import "./blocks/subscribe-section.scss";
-@import "./blocks/case-card.scss";
-@import "./blocks/completed-projects.scss";
-@import "./blocks/other-projects.scss";
-@import "./blocks/features.scss";
-@import "./blocks/feature.scss";
-@import "./blocks/about.scss";
-@import "./blocks/team.scss";
-@import "./blocks/tag.scss";
-@import "./blocks/blog-card.scss";
-@import "./blocks/blog.scss";
-@import "./blocks/actual-news.scss";
-@import "./blocks/blog-article.scss";
-@import "./blocks/popular-articles.scss";
-@import "./blocks/contacts.scss";
-@import "./blocks/certificates.scss";
-@import "./blocks/our-advantages.scss";
-@import "./blocks/reviews.scss";
-@import "./blocks/vendors.scss";
-@import "./blocks/form-section.scss";
-@import "./blocks/need-help.scss";
-@import "./blocks/consultation.scss";
-@import "./blocks/equipment-card.scss";
-@import "./blocks/import-replacement.scss";
-@import "./blocks/filter.scss";
-@import "./blocks/product-card.scss";
-@import "./blocks/catalog.scss";
-@import "./blocks/product-page.scss";
-@import "./blocks/cards-list.scss";
-@import "./blocks/vendor.scss";
-@import "./blocks/comparison.scss";
-@import "./blocks/index-header.scss";
-@import "./blocks/service-card.scss";
-@import "./blocks/services.scss";
-@import "./blocks/equipment.scss";
-@import "./blocks/sharing-exp.scss";
-@import "./blocks/work-with-us.scss";
-@import "./blocks/services-solutions.scss";
-@import "./blocks/conf-about.scss";
-@import "./blocks/sfr.scss";
-@import "./blocks/shd.scss";
-@import "./blocks/conf-serv.scss";
-@import "./blocks/person-card.scss";
-@import "./blocks/cert-card.scss";
-@import "./blocks/service-header.scss";
-@import "./blocks/other-service-card.scss";
-@import "./blocks/other-services-swiper.scss";
-@import "./blocks/admin-cons.scss";
-@import "./blocks/conf-group.scss";
-@import "./blocks/server-conf.scss";
-@import "./blocks/soft-catalog.scss";
-@import "./blocks/soft-imp-rep.scss";
-@import "./blocks/os-catalog.scss";
-@import "./blocks/os.scss";
-@import "./blocks/lic-card.scss";
-@import "./blocks/os-lic.scss";
-@import "./blocks/serv-comp.scss";
+@import "./blocks/page";
+@import "./blocks/page-header";
+@import "./blocks/page-main";
+@import "./blocks/page-footer";
+@import "./blocks/case";
+@import "./blocks/subscribe-section";
+@import "./blocks/case-card";
+@import "./blocks/completed-projects";
+@import "./blocks/other-projects";
+@import "./blocks/features";
+@import "./blocks/feature";
+@import "./blocks/about";
+@import "./blocks/team";
+@import "./blocks/tag";
+@import "./blocks/blog-card";
+@import "./blocks/blog";
+@import "./blocks/actual-news";
+@import "./blocks/blog-article";
+@import "./blocks/popular-articles";
+@import "./blocks/contacts";
+@import "./blocks/certificates";
+@import "./blocks/our-advantages";
+@import "./blocks/reviews";
+@import "./blocks/vendors";
+@import "./blocks/form-section";
+@import "./blocks/need-help";
+@import "./blocks/consultation";
+@import "./blocks/equipment-card";
+@import "./blocks/import-replacement";
+@import "./blocks/filter";
+@import "./blocks/product-card";
+@import "./blocks/catalog";
+@import "./blocks/product-page";
+@import "./blocks/cards-list";
+@import "./blocks/vendor";
+@import "./blocks/comparison";
+@import "./blocks/index-header";
+@import "./blocks/service-card";
+@import "./blocks/services";
+@import "./blocks/equipment";
+@import "./blocks/sharing-exp";
+@import "./blocks/work-with-us";
+@import "./blocks/services-solutions";
+@import "./blocks/conf-about";
+@import "./blocks/sfr";
+@import "./blocks/shd";
+@import "./blocks/conf-serv";
+@import "./blocks/person-card";
+@import "./blocks/cert-card";
+@import "./blocks/service-header";
+@import "./blocks/other-service-card";
+@import "./blocks/other-services-swiper";
+@import "./blocks/admin-cons";
+@import "./blocks/conf-group";
+@import "./blocks/server-conf";
+@import "./blocks/soft-catalog";
+@import "./blocks/soft-imp-rep";
+@import "./blocks/os-catalog";
+@import "./blocks/os";
+@import "./blocks/lic-card";
+@import "./blocks/os-lic";
+@import "./blocks/serv-comp";
