--- a/src/views/blocks/case.j2
+++ b/src/views/blocks/case.j2
@@ -1,103 +1,128 @@
 <section class="case section">
   <div class="case__container container">
-    <div class="section__content">
-      <div class="case__header section__header">
-        <div class="case__header-line">
-          <span class="case__date">20 апреля 2021 г. - 1 июня 2021 г</span>
-          <a class="case__link case__link--hidden" href="#!">
-            <span class="case__link-text">Следующий проект</span>
-            <svg class="case__link-icon" width="10" height="15" viewBox="0 0 10 15">
-              <use xlink:href="img/sprite.svg#next-arrow-icon"></use>
-            </svg>
-          </a>
-        </div>
-        <div class="case__header-line">
-          <h1 class="case__title title">Проектирование и монтаж&nbsp;СКС, ЭОМ Офиса компании «ОТКРЫТИЕ БРОКЕР»</h1>
-          <div class="case__logo-wrapper">
-            <img class="case__logo" src="@img/otkritie-logo.svg" alt="Логотип компании Открытие брокер" width="218" height="66">
-          </div>
-        </div>
+    <div class="case__content section__content">
+      <div class="case__header">
+        <h1 class="case__title title">Проектирование и монтаж&nbsp;СКС, ЭОМ Офиса компании «ОТКРЫТИЕ БРОКЕР»</h1>
+        <img class="case__logo" src="@img/otkritie-logo.svg" alt="Логотип компании Открытие брокер" width="151" height="46">
+      </div>
+      <div class="case__metrics-wrapper">
+        <ul class="case__metrics">
+          <li class="case__metrics-item">
+            <dl class="case__metrics-item-wrapper">
+              <dt class="case__metrics-name">Срок:</dt>
+              <dd class="case__metrics-value">14 дней</dd>
+            </dl>
+          </li>
+          <li class="case__metrics-item">
+            <dl class="case__metrics-item-wrapper">
+              <dt class="case__metrics-name">Площадь:</dt>
+              <dd class="case__metrics-value">3 500 м2</dd>
+            </dl>
+          </li>
+          <li class="case__metrics-item">
+            <dl class="case__metrics-item-wrapper">
+              <dt class="case__metrics-name">Количество портов:</dt>
+              <dd class="case__metrics-value">1200 шт</dd>
+            </dl>
+          </li>
+          <li class="case__metrics-item">
+            <dl class="case__metrics-item-wrapper">
+              <dt class="case__metrics-name">Количество портов:</dt>
+              <dd class="case__metrics-value">1200 шт</dd>
+            </dl>
+          </li>
+        </ul>
       </div>
       <div class="case__main section__main">
-        <div class="case__left">
-          <div class="case__daw-list daw-list">
-            <h2 class="daw-list__title">ПРОБЛЕМЫ, ТРЕБУЮЩИЕ РЕШЕНИЯ</h2>
-            <ul class="daw-list__list">
-              <li class="daw-list__item"><span>Сжатые сроки</span> проведения работ до запуска офиса;</li>
-              <li class="daw-list__item">Одновременное проведение отделочных работ и работ по монтажу сетевой инфраструктуры;</li>
-              <li class="daw-list__item">Разработка проектной документации;</li>
-              <li class="daw-list__item">Отсутствие исполнительной документации по освещению и кондиционированию.</li>
-            </ul>
-          </div>
-          <div class="case__daw-list daw-list">
-            <h2 class="daw-list__title">ЗАДАЧИ</h2>
-            <ul class="daw-list__list">
-              <li class="daw-list__item">Спроектировать ИТ-инфраструктуру и систему электроснабжения нового офиса в сжатый срок;</li>
-              <li class="daw-list__item">Осуществить поставку материалов;</li>
-              <li class="daw-list__item">Выполнить работы по монтажу СКС, <span>1052 порта</span>;</li>
-              <li class="daw-list__item">Выполнить монтаж системы электроснабжения рабочих мест, серверной и узлов коммутации;</li>
-              <li class="daw-list__item">Создать систему бесперебойного электроснабжения для потребителей, для которых перерыв электроснабжения недопустим, путём сборки этих потребителей в отдельные щиты, подключенные от ИБП;</li>
-              <li class="daw-list__item">Восстановление исполнительной документации по кондиционированию и освещению;</li>
-              <li class="daw-list__item">Восстановление схем коммутации питания, системы резервирования от ИБП и ДГУ.</li>
-            </ul>
-          </div>
-          <div class="case__daw-list daw-list--result">
-            <h2 class="daw-list__title">РЕЗУЛЬТАТ</h2>
-            <ul class="daw-list__list">
-              <li class="daw-list__item">СКС построена с применением материалов и компонентов Hyperline, с оптимальным соотношением «цена/качество», что <span>позволило сократить расходы без снижения качества и надежности коммутации оборудования</span>;</li>
-              <li class="daw-list__item">Все электрощиты перебраны, старые автоматы заменены, проведена профилактика контактов, составлены и актуализированы схемы электрощитов;</li>
-              <li class="daw-list__item">Восстановлена исполнительная документация по кондиционированию и освещению;</li>
-              <li class="daw-list__item">ИТ-инфраструктура нового офисного помещения запущена в срок.</li>
-            </ul>
+        <div class="case__daw-list daw-list">
+          <h3 class="case__sub-title">Задачи:</h3>
+          <ul class="daw-list__list">
+            <li class="daw-list__item">Спроектировать ИТ-инфраструктуру и систему электроснабжения нового офиса в сжатый срок;</li>
+            <li class="daw-list__item">Осуществить поставку материалов;</li>
+            <li class="daw-list__item">Выполнить работы по монтажу СКС, <span>1052 порта</span>;</li>
+            <li class="daw-list__item">Выполнить монтаж системы электроснабжения рабочих мест, серверной и узлов коммутации;</li>
+            <li class="daw-list__item">Создать систему бесперебойного электроснабжения для потребителей, для которых перерыв электроснабжения недопустим, путём сборки этих потребителей в отдельные щиты, подключенные от ИБП;</li>
+            <li class="daw-list__item">Восстановление исполнительной документации по кондиционированию и освещению;</li>
+            <li class="daw-list__item">Восстановление схем коммутации питания, системы резервирования от ИБП и ДГУ.</li>
+          </ul>
+        </div>
+        <a class="case__big-photo-wrapper" href="@img/cases/photo-1-big.webp">
+          <picture>
+            <source type="image/webp" srcset="@img/cases/photo-1-big.webp 1x">
+            <img class="case__photo" src="@img/cases/photo-1-big.jpg" alt="Фотография из кейса 1" loading="lazy" width="7222" height="4124">
+          </picture>
+        </a>
+        <div class="case__text-block">
+          <h3 class="case__sub-title">Решение:</h3>
+          <p class="case__text-par">Это был уже третий наш собственный ЦОД и далеко не первый и даже не двадцатый из тех, что мы строили или помогали строить по всей стране для различных заказчиков. Соответственно, к этому моменту мы уже имели отличную команду инженеров и проверенных поставщиков.</p>
+          <h4 class="case__text-title">Базовые параметры ЦОД «Компрессор»</h4>
+          <ul class="list case__text-list">
+            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
+            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
+            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
+            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
+            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
+            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
+            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
+            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
+            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
+            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
+            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
+          </ul>
+          <p class="case__text-par">Строительство «Компрессора» мы начали в 2009 году. Хотелось сделать всё по уму, поскольку специфика некоторых наших клиентов такова, что ЦОДы должны работать несмотря ни на что. Был выбран уровень TIER-III как наиболее соответствующий задачам (такие ЦОДы продолжают стабильно работать без изменений при выходе любого узла системы из строя и имеют показатель доступности 99,98%). Мы прошли сертификацию Uptime Institute по проекту и по объекту – до нас в России было всего два ЦОДа такого уровня.</p>
+          <p class="case__text-par">Итак, на начало работ у нас было здание. В целом оно было в хорошем состоянии. Мы добавили перекрытия между первым и вторым этажом, плюс нарастили третий этаж под бытовые нужды (например, там сейчас столовая).</p>
+          <p class="case__text-par">Вот и всё. После того, как фасад здания был полностью облицован, мы ещё привели в порядок территорию, поставили забор для охраны и посадили газон</p>
+          <p class="case__text-par"><a href="#!" class="link">Ссылки</a></p>
+          <p class="case__text-par">Вот здесь есть фотоэскурсия по данному ЦОД, здесь – больше деталей, а вот здесь – про особенности сертификации.</p>
+          <p class="case__text-par">P.S. Если интересно, я напишу пост про оборудование, инженерные системы и поставщиков (кстати, некоторые отечественные поставщики очень даже неплохо себя зарекомендовали).</p>
+        </div>
+        <div class="case__daw-list daw-list--result">
+          <h2 class="case__sub-title">РЕЗУЛЬТАТ</h2>
+          <ul class="daw-list__list">
+            <li class="daw-list__item">СКС построена с применением материалов и компонентов Hyperline, с оптимальным соотношением «цена/качество», что <span>позволило сократить расходы без снижения качества и надежности коммутации оборудования</span>;</li>
+            <li class="daw-list__item">Все электрощиты перебраны, старые автоматы заменены, проведена профилактика контактов, составлены и актуализированы схемы электрощитов;</li>
+            <li class="daw-list__item">Восстановлена исполнительная документация по кондиционированию и освещению;</li>
+            <li class="daw-list__item">ИТ-инфраструктура нового офисного помещения запущена в срок.</li>
+          </ul>
+        </div>
+        <div class="case__gallery">
+          {% set SLIDES_NUM = 6 %}
+          <div class="case__gallery-swiper-wrapper section__card-swiper-container">
+            <div class="case__gallery-swiper swiper section__card-swiper" data-case-swiper>
+              {% if sectionCardSwiperCnt is not defined %}
+                {% set sectionCardSwiperCnt = 1 %}
+              {% endif %}
+
+              <div class="case__gallery-swiper-buttons section__card-swiper-buttons">
+                <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+                  <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
+                    <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
+                  </svg>
+                  <span class="visually-hidden">Перелестнуть назад</span>
+                </button>
+                <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+                  <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
+                    <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
+                  </svg>
+                  <span class="visually-hidden">Перелестнуть вперед</span>
+                </button>
+              </div>
+              <div class="case__gallery-grid swiper-wrapper">
+                {% set photoCounter = 1 %}
+                {% for imageCount in range(SLIDES_NUM) %}
+                  <div class="case__gallery-swiper-slide swiper-slide">
+                    <a class="case__photo-wrapper" href="@img/cases/photo-{{ photoCounter }}-big.jpg">
+                      <picture>
+                        <source type="image/webp" srcset="@img/cases/photo-{{ photoCounter }}.webp 1x">
+                        <img class="case__photo" src="@img/cases/photo-{{ photoCounter }}.jpg" alt="Фотография из кейса {{ photoCounter }}" loading="lazy" width="230" height="156">
+                      </picture>
+                    </a>
+                  </div>
+                {% endfor %}
+              </div>
+            </div>
           </div>
         </div>
-        <div class="case__right">
-          <div class="case__photos">
-            {% set photoCounter = 1 %}
-            <a class="case__photo-wrapper" href="@img/case-photo-{{ photoCounter }}-big.jpg">
-              <picture>
-                <source type="image/webp" srcset="@img/case-photo-{{ photoCounter }}.webp 1x">
-                <img class="case__photo" src="@img/case-photo-{{ photoCounter }}.jpg" alt="Фотография из кейса {{ photoCounter }}">
-                {% set photoCounter = photoCounter + 1 %}
-              </picture>
-            </a>
-            <a class="case__photo-wrapper" href="@img/case-photo-{{ photoCounter }}-big.jpg">
-              <picture>
-                <source type="image/webp" srcset="@img/case-photo-{{ photoCounter }}.webp 1x">
-                <img class="case__photo" src="@img/case-photo-{{ photoCounter }}.jpg" alt="Фотография из кейса {{ photoCounter }}">
-                {% set photoCounter = photoCounter + 1 %}
-              </picture>
-            </a>
-            <a class="case__photo-wrapper" href="@img/case-photo-{{ photoCounter }}-big.jpg">
-              <picture>
-                <source type="image/webp" srcset="@img/case-photo-{{ photoCounter }}.webp 1x">
-                <img class="case__photo" src="@img/case-photo-{{ photoCounter }}.jpg" alt="Фотография из кейса {{ photoCounter }}">
-                {% set photoCounter = photoCounter + 1 %}
-              </picture>
-            </a>
-            <a class="case__photo-wrapper" href="@img/case-photo-{{ photoCounter }}-big.jpg"">
-              <picture>
-                <source type="image/webp" srcset="@img/case-photo-{{ photoCounter }}.webp 1x">
-                <img class="case__photo" src="@img/case-photo-{{ photoCounter }}.jpg" alt="Фотография из кейса {{ photoCounter }}">
-                {% set photoCounter = photoCounter + 1 %}
-              </picture>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="case__footer section__footer">
-        <a class="case__link case__link--back case__link--hidden" href="./cases.html">
-          <svg class="case__link-icon" width="10" height="15" viewBox="0 0 10 15">
-            <use xlink:href="img/sprite.svg#next-arrow-icon"></use>
-          </svg>
-          <span class="case__link-text">Назад ко всем проектам</span>
-        </a>
-        <a class="case__link" href="#!">
-          <span class="case__link-text">Следующий проект</span>
-          <svg class="case__link-icon" width="10" height="15" viewBox="0 0 10 15">
-            <use xlink:href="img/sprite.svg#next-arrow-icon"></use>
-          </svg>
-        </a>
       </div>
     </div>
   </div>
