--- a/src/scss/blocks/form-section.scss
+++ b/src/scss/blocks/form-section.scss
@@ -36,7 +36,7 @@
     font-weight: 700;
     font-size: 28px;
     line-height: 115%;
-    font-family: "Proxima Nova", "Arial", sans-serif;
+    font-family: "Proxima Nova", Arial, sans-serif;
   }
 }
 
