--- a/src/scss/blocks/page.scss
+++ b/src/scss/blocks/page.scss
@@ -11,7 +11,7 @@
 
   font-size: 16px;
   line-height: 19px;
-  font-family: "Proxima Nova", "Arial", sans-serif;
+  font-family: "Proxima Nova", Arial, sans-serif;
   color: $black-color;
 }
 
