--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -35,7 +35,7 @@
 @font-face {
   font-style: normal;
   font-weight: 400;
-  font-family: "Jost";
+  font-family: Jost;
 
   font-display: swap;
   src: url("../fonts/Jost-Regular.woff2") format("woff2");
@@ -44,7 +44,7 @@
 @font-face {
   font-style: normal;
   font-weight: 500;
-  font-family: "Jost";
+  font-family: Jost;
 
   font-display: swap;
   src: url("../fonts/Jost-Medium.woff2") format("woff2");
@@ -53,7 +53,7 @@
 @font-face {
   font-style: normal;
   font-weight: 600;
-  font-family: "Jost";
+  font-family: Jost;
 
   font-display: swap;
   src: url("../fonts/Jost-SemiBold.woff2") format("woff2");
@@ -62,7 +62,7 @@
 @font-face {
   font-style: normal;
   font-weight: 800;
-  font-family: "Jost";
+  font-family: Jost;
 
   font-display: swap;
   src: url("../fonts/Jost-ExtraBold.woff2") format("woff2");
@@ -71,7 +71,7 @@
 @font-face {
   font-style: normal;
   font-weight: 300;
-  font-family: "Jost";
+  font-family: Jost;
 
   font-display: swap;
   src: url("../fonts/Jost-Light.woff2") format("woff2");
