--- a/src/scss/blocks/case.scss
+++ b/src/scss/blocks/case.scss
@@ -51,7 +51,7 @@
 
   @media (width >= $desktop-width) {
     position: sticky;
-    top: 10px;
+    top: 95px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -175,6 +175,7 @@
   margin: 0;
   padding: 0;
   font-size: 20px;
+  font-weight: 600;
   line-height: 140%;
   margin-bottom: 12px;
   text-transform: uppercase;
@@ -248,6 +249,10 @@
 .case__gallery-swiper-buttons {
   justify-content: flex-end;
   margin-bottom: 15px;
+
+  @media (width >= $tablet-width) {
+    display: none;
+  }
 }
 .case__gallery-grid {
   @media (width >= $tablet-width) {
