добавил отзыв к страицу кейса

--- a/src/views/blocks/case.j2
+++ b/src/views/blocks/case.j2
@@ -125,7 +125,7 @@
         </div>
 
         {# Вендоры #}
-        <div class="vendors">
+        <div class="case__vendors vendors">
           <div class="section__content">
             <h3 class="visually-hidden">Вендоры, используемые в проекте</h3>
             <p class="case__sub-title">В ПРОЕКТЕ ИСПОЛЬЗОВАЛИ ПРОДУКТЫ ВЕНДОРОВ:</p>
@@ -159,7 +159,21 @@
                   </div>
               </div>
             </div>
-        </section>
+          </div>
+        </div>
+        {# Отзыв #}
+        <div class="case__reviews">
+          <h3 class="case__sub-title">ОТЗЫВ ЗАКАЗЧИКА:</h3>
+          <div class="case__review">
+            <a class="case__review-link" href="@img/review-letter.jpg" data-review>
+              <img class="case__review-image" src="@img/review-letter.jpg" alt="">
+            </a>
+            <div class="case__review-text-container">
+              <img class="case__review-company-logo" width="136" height="41" src="@img/postgrespro-logo.svg" alt="Логотип компании PostgresPro.">
+              <p class="case__review-text">Немецкая логистическая компания <b>C. Spaarmann GmbH</b> рекомендует команду Exasystems к сотрудничеству, которая произвела ее успешный переход на удаленный режим работы и снизила расходы на ИТ.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
