--- a/src/scss/blocks/case.scss
+++ b/src/scss/blocks/case.scss
@@ -201,21 +201,6 @@
   margin-bottom: 20px;
 }
 
-// .case__photos {
-//   display: flex;
-//   flex-grow: 0;
-//   flex-direction: column;
-
-//   gap: 10px;
-
-//   @media (min-width: $tablet-width) and (max-width: $max-tablet-width) {
-//     display: grid;
-
-//     gap: 15px;
-//     grid-template-columns: repeat(2, 323px);
-//   }
-// }
-
 .case__big-photo-wrapper,
 .case__photo-wrapper {
   display: flex;
@@ -241,6 +226,11 @@
 }
 
 .case__gallery {
+  margin-bottom: 40px;
+
+  @media (width >= $desktop-width) {
+    margin-bottom: 80px;
+  }
 }
 .case__gallery-swiper-wrapper {
 }
@@ -294,5 +284,80 @@
       object-fit: cover;
     }
   }
+}
+
+.case__vendors {
+  padding: 0;
+  margin-bottom: 40px;
+
+  @media (width >= $desktop-width) {
+    margin-bottom: 80px;
+  }
+}
+
+.case__review {
+  display: flex;
+  flex-direction: column;
+  max-width: 350px;
+  gap: 15px;
+
+  @media (width >= $tablet-width) {
+    flex-direction: row;
+    max-width: none;
+    gap: 30px;
+  }
+}
+.case__review-link {
+  display: block;
+  flex-shrink: 0;
+
+  text-decoration: none;
+
+  filter: drop-shadow(2px 2px 10px rgb(0 0 0 / 5%));
+
+  transition: opacity 0.3s ease;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+
+  @media (max-width: $max-mobile-width) {
+    width: 100%;
+  }
+  @media (min-width: $tablet-width) {
+    max-width: 440px;
+  }
+}
+.case__review-image {
+
+  @media (width < $tablet-width) {
+    width: 100%;
+  }
+}
+.case__review-text-container {
+  display: flex;
+  flex-direction: column;
+
+  gap: 20px;
+}
+.case__review-company-logo {
+  align-self: flex-start;
+
+  @media (width < $tablet-width) {
+    display: none;
+  }
+}
+.case__review-text {
+  order: 2;
+  margin: 0;
+  padding: 0;
+
+  font-size: 16px;
+  line-height: 19px;
+  color: $black-color;
 }
 
