сделал кейсы v2 без js

--- a/src/scss/blocks/case.scss
+++ b/src/scss/blocks/case.scss
@@ -7,6 +7,11 @@
   }
 }
 
+.case--no-pads {
+  margin: 0;
+  padding: 0;
+}
+
 .case__content {
   position: relative;
   @media (width >= $desktop-width) {
