сделал интерактивными картинки в кейсах и добавил подгрузку карточек но не до конца сделал красивую имитацию

--- a/src/scss/blocks/cases.scss
+++ b/src/scss/blocks/cases.scss
@@ -128,3 +128,7 @@
 .cases__card-gallery-preview {
   padding-bottom: 68.65%;
 }
+
+.cases__card-big-img--update {
+  animation: showing-animation 1s;
+}
