--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,6 +32,7 @@
 @import "./blocks/messenger";
 @import "./blocks/side-panel";
 @import "./blocks/list";
+@import "./blocks/spinner";
 
 //
 @import "./blocks/page";
