--- a/src/views/pages/cases-v2.j2
+++ b/src/views/pages/cases-v2.j2
@@ -77,6 +77,7 @@
               </li>
             {% endfor%}
           </ul>
+          {% include "./blocks/spinner.j2" %}
         </div>
       </div>
     </section>
