добавил паддинги спиннеру

--- a/src/scss/blocks/spinner.scss
+++ b/src/scss/blocks/spinner.scss
@@ -9,6 +9,7 @@
 
 .spinner {
   display: flex;
+  padding: 15px 0;
 }
 
 .spinner--hidden {
@@ -27,10 +28,6 @@
     fill: #675fc6;
   }
 }
-// .spinner-container {
-//   display: flex;
-//   padding: 15px 0;
-// }
 
 
 
